# radar-simulation

./: .gitattributes  .gitignore  LICENSE  README.md  RM赛场地图仿真设置指南.md  robot_world.sdf  simple_test_world.sdf  使用说明.md  雷达仿真使用说明.md
demo_pcds/: frame_000.pcd  frame_001.pcd  frame_002.pcd  frame_003.pcd  frame_004.pcd
src/models/: RMUC2026.stp  convert_stp_to_stl.py  normalized_map.pcd  normalized_map_downsample.pcd
src/radar_sim/: CMakeLists.txt  package.xml
src/radar_sim/config/: README.md  generate_world.py  sim_config.py
src/radar_sim/launch/: radar_sim.launch.py
src/radar_sim/rviz/: radar_sim.rviz
src/radar_sim/scripts/: check_radar_sim.sh  save_pointcloud_demo.py  setup_radar_sim.sh  validate_pointcloud.sh
src/radar_sim/worlds/: ground_plane.sdf  rmuc2026_radar_sim.sdf
src/rmoss_gazebo/rmoss_gz_base/src/: gimbal_controller.cpp
src/rmoss_gazebo/rmoss_gz_plugins/plugins/light_bar_controller/: LightBarController.cc
src/rmoss_gazebo/worlds/: rmuc2026_competition.sdf  rmuc2026_radar_sim.sdf
src/rmoss_gz_resources/resource/models/aerial_robot/: model.config  model.sdf
src/rmoss_gz_resources/resource/models/radar_station/: model.config  model.sdf
src/rmoss_gz_resources/resource/models/rm21_armor_module/meshes/: small_armor.dae  small_armor_light_bar.dae  small_armor_target.dae
src/rmoss_gz_resources/resource/models/rm21_light_indicator_module/meshes/: light_indicator_bar.dae  (+1 more)
src/rmoss_gz_resources/resource/models/rmua19_standard_robot/: model.sdf
src/rmoss_gz_resources/resource/models/rmuc2026_competition/: model.config  model.sdf
(+7 files in other folders)
